crystal-facet-uml (1.38.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Nicer layout of grid while dragging and creating objects
  * json import speed up by factor 20 (1m37,071s -> 0m4,644s) by using
    one top-level transaction only
  * On Windows(TM), the black terminal window is hidden (via -mwindows)

   -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 18 Jun 2022 15:00:00 +0100

crystal-facet-uml (1.37.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * the screen layout stays fix while creating features and relationships
  * New DB and Open DB are two separate buttons
  * on Windows(TM), the working directory is the installation root (again)

   -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 14 May 2022 15:00:00 +0100

crystal-facet-uml (1.36.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Workarounds for window switching in gtk 4.6.1 on Windows(TM) removed
  * The edit widgets auto-store only at focus left event also with gtk4

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 24 Apr 2022 11:00:00 +0100

crystal-facet-uml (1.36.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * During import, changed ids and classifier-names are reported on stdout
  * The json export contains some more information to improve readability
  * sources can be compiled and linked against gtk4 (as done for win version)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Apr 2022 19:00:00 +0100

crystal-facet-uml (1.35.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * undo of paste requires just 1 click on undo btn (as in version 1.33.1)
  * when pasting from the clipboard, uuids are preserved.
  * pasting messages-between-lifelines from the clipboard to other diagrams
    is not possible anymore, please create new messages when needed.
  * when creating features, the type field is not pre-filled by a proposal
  * json export produces identical text files if there are no changes
  * json files can be imported