@@ -1,14 +1,13 @@
 ideas for future versions:
   @gui
   [ ] After deselecting all elements, paste does not work. One has to select an element first.
-! [ ] During drag and drop (and create), background lines shall better explain the implicit grid
   [ ] performance optimization: redraw only when shown(=visible) items have changed;
       do not redraw 3 times when changing 3 attributes simultaneously. (especially at undo/redo)
       do not redraw twice, once for deactivating a tool and again for activating another
   [ ] a "saveAs" or export-as-cfu1 command should allow to copy the current db
   [ ] show a progress bar while exporting diagrams (especially for png mode)
   [ ] scrolling through search list missing if result list is too long
-  [ ] Move a child diagram out of and behind the parent is not possible in one single step
+  [ ] Move a child diagram out of and behind the parent is not possible in one single step (cannot reproduce?)
 ! [ ] The diagram gets too often accidentially selected, causing issues with copy/paste
 ! [ ] The yellow selected element shall always be part of the pink set
   @gui+ctrl
